Closed Bug 1288585 Opened 9 years ago Closed 9 years ago

[Decoder Doctor] WMF-missing console message is misleading on Windows XP

Categories

(Core :: Audio/Video: Playback, defect, P3)

50 Branch
All
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

Details

Attachments

(1 file)

When attempting to play an H.264/AAC/MP4 file on Windows XP, the following warning is shown in the console: "To play video formats video/mp4; codecs="avc1.42E01E mp4a.40.2", video/mp4, you need to install extra Microsoft software, see https://support.mozilla.org/kb/fix-video-audio-problems-firefox-windows" However unlike Windows Vista+, XP does not have the option to add Microsoft software to handle these formats. So we should not show this console message. Maybe another one? TBD. Note that the drop-down notification bar is not shown, as expected.
On Windows XP (and others before Vista), if WMF is required to play a format, the console message should not refer to Microsoft software as it is not available there. Review commit: https://reviewboard.mozilla.org/r/66774/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/66774/
Attachment #8774246 - Flags: review?(cpearce)
Try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=e3f52f5e90ead018b28da3c097dce06616ab1958 And also manually tested on Windows XP to verify that the new message is shown there.
Comment on attachment 8774246 [details] Bug 1288585 - Clarify console message about WinXP unsupported formats - https://reviewboard.mozilla.org/r/66774/#review63550
Attachment #8774246 - Flags: review?(cpearce) → review+
Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cde1abb38839 Clarify console message about WinXP unsupported formats - r=cpearce
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Depends on: 1324183
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: