Bug 1288585 - Clarify console message about WinXP unsupported formats - r=cpearce

On Windows XP (and others before Vista), if WMF is required to play a format,
the console message should not refer to Microsoft software as it is not
available there.

MozReview-Commit-ID: LaERcaOfePe